# admc-physics-bench-v2

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/: simple_bench.cpp
bench/: __init__.py  aggregators.py  cli.py  config.py  runner.py
bench/templates/: default.yaml
docs/: architecture_overview.md  benchmarks.md  layout_and_tiling.md  litterature.md  solver_alignment_plan.md  solver_design.md
docs/_bak/: architecture_overview2.md  architecture_overview3.md
docs/legacy-v1/: admc_overview.md  alg_scalar_distance_joint_math.md  alg_scalar_friction_rows_math.md  alg_scalar_normal_row_math.md  alg_scalar_soa_batched_math.md  benchmarking_ci.md  cli_reference.md  codex_fully_soa_solver_task.md  metrics.md  nr_math.md  scenes.md  soa_improvement_potentials.md  soa_native_solver_usage.md  soa_solver_design.md
docs/theory/: 01_admc_overview.md  02_relativistic_admc.md  03_nr_mechanics_bridge.md  04_constraint_rows_math.md  05_pgs_and_variants_math.md  06_invariants_and_metrics.md
include/admc/admc/: channels.hpp
include/admc/baseline/: contact.hpp  solver.hpp
include/admc/constraints/: constraint_row.hpp
include/admc/core/: mat3.hpp  quat.hpp  vec3.hpp
include/admc/scene/: scene_builders.hpp  scene_desc.hpp  scene_library.hpp
include/admc/solver/: conservation_tracker.hpp  constraint_batch.hpp  constraint_batch_builder.hpp  constraint_batch_cache.hpp  constraint_key.hpp  iteration_control.hpp  operators.hpp  simple_pgs.hpp  tile_pgs.hpp  warmstart.hpp
include/admc/world/: body.hpp
tests/: bench_smoke_check.py  test_baseline_solver.cpp  test_builder_determinism.cpp  test_core.cpp  test_math.cpp  test_simple_pgs.cpp  test_solver_policies.cpp  test_tile_warmstart.cpp
